# server-jukebox

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  jukebox.service  sort_script.py
.sqlx/: query-08af2bc6c98c5b3b64aa38bc9d0e16acce587a8c17d061afba6a8e81bdc13aff.json  query-1de7a0bac804313d84ca0685f1dd59bdaabf759a4d0a5e2b6217fcb6837b84e2.json  query-25ca13f8020dda97c53e4f28764cfaf1932cbb8be3513e980fba59d1b672aa56.json  query-29909873e39b1dbb7b478c96b4e76fda22b1771bb2d981daf4242f33bc45b274.json  query-30c25c89f60bdc7613670d949c298fbcc0369821ce04a32f25d08460cda1d61f.json  query-37ebd158fe7de5617671f386bcebf7ab780ac903f2ab0a95c9ec53122d243512.json  query-41979c00c5c34919d56e147665213fd5f65c783bd235b14ec4ddbbb9265b0b4f.json  query-5096918abbf4b483c89d096db73d4dcb1ff9f841f4212f272ae20522c29c204c.json  query-575c0fd2afdc23afd888ba6270d0c14ea9367ca7c2b8c30698ed3a1754b4ba15.json  query-59fa3e6fd17f3612d06f5418aea7b60adc6568ff7f51fe75112f98adeea7428e.json  query-5de02de2ca16bb75632843dae0fdfdb36344385675c112d3430c8a1ef0afd1b7.json  query-7acc930d053ff656c83b08b5d7e975f4723bfd2d53b7bb4e1447f1f3f7e2b1e9.json  query-7d5f712a820e7220bba5a8c28a74dc0d32b651f1ce5ed79045ed0f226fe3836f.json  query-813664705efb73fd438cc05f36e0344e76959f480370eb4f11e1a331b461fea4.json  query-85a02bf8e55fe774911ee374989c4b625a5664d37ce3cb97ecd3acbed7c565b6.json  query-a7490b8bd286ab7fef66058a039bc7694b43df03e737551fb49ec4f65cf759f3.json  query-ad9754abb788ddc2cadc74116a5bc25fbbdd0b9e845fd2c4cbe0954ac906aa1f.json  query-bea3e3d3b1aa2414c7c2b547c4de790feabf76db11f0fcff680627bc75a6b416.json  (+2 more)
(+15 files in other folders)
