[package]
name = "server-jukebox"
authors = ["Berin Aniesh <berinaniesh@gmail.com"]
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
chrono = "0.4.26"
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["mysql", "runtime-tokio-rustls", "macros"] }
tera = "1.19.0"
tokio = { version = "1.32.0", features = ["process", "fs"] }
uuid = { version = "1.4.1", features = ["v4"] }
